fix: Prevent zoom in automatically on mobile

--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -96,3 +96,10 @@ button:hover {
     width: 100vw;
   }
 }
+
+/* iphone 6+, 7+ and 8+ */
+@media only screen and (min-device-width: 414px) and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 3) {
+  textarea {
+    font-size: 16px;
+  }
+}
